--- a/style/main.css
+++ b/style/main.css
@@ -133,53 +133,33 @@ body.dark-mode {
   background-color: #121212;
   color: #ffffff;
   transition: background-color 0.3s, color 0.3s;
-}
-/* Temel stil ayarları */
 body {
   background-color: #121212;
-  color: #ffffff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #fff;
+  font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  padding-top: 50px;
   text-align: center;
 }
 
-/* Başlık stil */
-header h1 {
+h1 {
   font-size: 3rem;
   color: #ff4081;
   margin-bottom: 20px;
 }
 
-/* Hero bölüm stil */
-.hero h2 {
-  font-size: 2rem;
-  margin: 10px 0;
-}
-
-.hero p {
+p#description {
   font-size: 1.2rem;
-  line-height: 1.6;
-  color: #e0e0e0;
-}
-
-/* Hakkımızda bölüm stil */
-.about h2 {
-  font-size: 1.8rem;
-  margin: 20px 0 10px;
-}
-
-.about p {
-  font-size: 1rem;
   max-width: 600px;
-  line-height: 1.6;
   color: #e0e0e0;
 }
+
+
 
 
 /* Gerekirse diğer elementlerin koyu tema renklerini buraya ekle */
