--- a/style/main.css
+++ b/style/main.css
@@ -61,31 +61,32 @@ h1, h2 {
   margin-bottom: 20px;
 }
 
-nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #222;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 0;
-  border-top: 1px solid #333;
-}
-
 nav a {
   color: #aaa;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 28px; /* ikon büyüklüğü */
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 10px;
 }
 
 nav a:hover {
   color: #fff;
 }
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  background-color: #222;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+  border-top: 1px solid #333;
+}
+
 
 .icon {
   font-size: 20px;
