--- a/style/main.css
+++ b/style/main.css
@@ -148,6 +148,7 @@ p#description {
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 100vh;
   background-color: #111;
   display: flex;
   justify-content: space-around;
