--- a/style/main.css
+++ b/style/main.css
@@ -177,16 +177,16 @@ nav a:hover {
     font-size: 24px;
   }
 
-  .bottom-buttons {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .bottom-buttons button {
-    width: 80%;
-    margin: 0 auto;
-  }
-
+ .bottom-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px; /* Buton grubunu aşağı kaydırır */
+  padding: 20px 0;
+  background-color: #f1f1f1;
+  width: 100%;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+}
   section {
     padding: 60px 15px;
   }
